# system_of_permissions

./: docker-compose.yml  pyproject.toml
ars/: .dockerignore  Dockerfile  README.md  env.example  requirements.txt
ars/app/: __init__.py  main.py
ars/app/api/: __init__.py  requests.py
ars/app/core/: __init__.py  config.py  db.py  rabbitmq.py
ars/app/models/: __init__.py  access_request.py
ars/app/schemas/: __init__.py  access_request.py
ars/app/services/: __init__.py  access_request.py
ars/migrations/: env.py
common/: enums.py
common/clients/: registry_client.py
common/models/: access_request.py
registry/: .env.example  Dockerfile  requirements.txt
registry/app/: __init__.py  main.py  models.py  schemas.py
registry/app/api/: admin.py  deps.py  internal.py
registry/app/core/: config.py  db.py
scripts/: demo_scenario.py
worker/: .dockerignore  .env.example  Dockerfile  requirements.txt  run_worker.py
worker/app/: __init__.py
worker/app/core/: __init__.py  config.py  db.py  rabbitmq.py
worker/app/models/: __init__.py  access_request.py
worker/app/services/: __init__.py  registry_client.py  requests.py
worker/app/workers/: access_request_worker.py
